--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+2019-05-22 Version 1.36.55
+1. 测试发布 Arms 全部语言
+2. 查看发布是否成功
+
 2019-05-22 Version 1.36.54
 - Generated 2014-05-26, 2016-03-14 for `Ecs`
 
