--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+2019-05-22 Version 1.36.57
+1. 测试发布 Ecs 2.0.1 的代码
+2. 看看换行行不行
+3. 继续看看换行行不行
+
 2019-05-22 Version 1.36.56
 1. 测试 github 发布 3 大家快来看看
 
