--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2019-05-23 Version 1.36.62
+测试 Aas 发布 1.0.16 版本各个语言的 SDK，快 github 压不住了
+
 2019-05-23 Version 1.36.61
 测试发布 ECS 2.0.6 各语言所有的 API 的版本
 
