--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2020-02-12 Version: 1.36.102
+- Test for reactor sdk portal.
+
 2020-02-12 Version: 1.36.101
 - Generated 2019-02-25 for `sdk-test`.
 
